tests/NormalTests/paczka1/small_fuzzy/60320947.err
Error in line 1: gmm18ZZpbYg A617 30,1
Error in line 12: n3mvfJ0 S582 27,9
Error in line 13: n3mvfJ0 A694 21,8
